# TorchStream

./: .gitignore  Dockerfile  LICENSE  README.md  _debug.py  _temp.py  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini
demo_tools/: animated_sliding_window_stream.py  audio.py  sliding_window_stream_with_history.py
dev_tools/: streamlit_radio_stream.py  tracing.py
examples/: 1_introduction_with_spectrograms.py  2_sliding_window_solver_with_resamplers.py  3_streaming_bigvgan.py  4_streaming_kokoro_tts.py  README.md  __init__.py  streamlit_app.py  tracing.py
examples/audio_resampling/: demo.py
examples/bigvgan/: activations.py  bigvgan.py  demo.py  streaming_bigvgan.py
examples/melspectrogram/: demo copy.py  demo.py  script.py
examples/resources/: Dockerfile  Dockerfile.cpu  Dockerfile.cuda
examples/resources/bigvgan/: activations.py  bigvgan.py  config_base_22khz_80band.json  meldataset.py  melspectrogram.py
examples/tts/: demo.py
examples/tts_kokoro/: demo.py  temp.py
examples/utils/: animated_sliding_window_stream.py  download.py  plots.py  streamlit_dynamic_logs.py  streamlit_radio_stream.py  streamlit_run_state.py  streamlit_worker.py
examples/wip/: purepy_kokoro_demo.py
tests/: rng.py  sliding_window_params_cases.py  sliding_window_params_edge_cases.py  stream_equivalence.py  stream_equivalency.py  test_array_interface.py  test_in_out_rel_solver.py  test_kernel_sparsity.py  test_nan_trick.py  test_sliding_window_context.py  test_sliding_window_param_solver.py  test_sliding_window_stream.py  test_sliding_window_stream_context.py
torchstream/: __init__.py  call_intercept.py  exception_signature.py  sequence_dtype.py  sequence_signature.py  sequence_spec.py  stream.py  stream_equivalence.py  tensor_provider.py
torchstream/analysis/: call_intercept.py  telemetry.py
torchstream/buffers/: stream_buffer.py
torchstream/patching/: call_identification.py  call_intercept.py
torchstream/sequence/: array_interface.py  containers.py  dtype.py  seq_spec.py  seq_specs.py  sequence.py  sequential_array.py  stream_buffer.py
torchstream/sliding_window/: dummy_sliding_window_transform.py  kernel_sparsity.py  nan_trick.py  sliding_window_in_out_rel_params.py  sliding_window_in_out_rel_sampler.py  sliding_window_in_out_size_sampler.py  sliding_window_params.py  sliding_window_params_sampler.py  sliding_window_params_solver.py  sliding_window_stream.py  sliding_window_stream_params.py  sliding_window_stream_params_sampler.py  threshold_harvester.py  transforms.py  z3_utils.py
torchstream/streams/: sliding_window_stream.py
torchstream/thingy/: sliding_window.py
torchstream/transforms/: sliding_window.py  z3_utils.py
