[project]
name = "torchstream"
version = "0.0.1"
description = "A library for making PyTorch models streamable"
authors = [
  { name = "Corentin Jemine", email = "corentin.jemine@gmail.com" }
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23.0",
    "pytest-profiling>=1.8.1",
    "pytest>=8.3.4",
    "torch>=1.11.0",
    "z3-solver>=4.14.0.0",
]

[project.urls]
Repository = "https://github.com/CorentinJ/TorchStream"

[tool.setuptools.packages.find]
include = ["torchstream*"]

# Defining a build system lets us install the project as a dev package
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "torchaudio>=2.5.1",
    "pandas>=2.0.3",
]

[tool.ruff]
line-length = 120
# ignore = ["F841"]
