[project]
name = "torchstream"
version = "0.0.1"
description = "A library for making PyTorch models streamable"
authors = [
  { name = "Corentin Jemine", email = "corentin.jemine@gmail.com" }
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23.0",
    "torch>=1.11.0",
    "z3-solver>=4.14.0.0",
]

[project.urls]
Repository = "https://github.com/CorentinJ/TorchStream"

[tool.setuptools.packages.find]
include = ["torchstream*"]

# Defining a build system lets us install the project as a dev package
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
demos = [
    "diffusers>=0.35.2",
    "torchsde>=0.2.6",
    "torchaudio>=2.5.1",
    "transformers>=4.46.3",
    "webrtcvad>=2.0.10",
    "librosa>=0.11.0",
    "resampy>=0.4.3",
    "accelerate>=1.0.1",
    "kokoro>=0.9.2",
    "soundfile",
]
dev = [
    "pytest>=8.3.4",
    "pytest-profiling>=1.8.1",
]

[tool.ruff]
line-length = 120
# ignore = ["F841"]
